# mmm

./: .gitignore  Cargo.toml  README.md  figuring-it-out.excalidraw  strategies.md
.github/workflows/: rust.yml
src/: api.rs  bots.rs  cli.rs  coms.rs  errors.rs  internal_packet.rs  main.rs  manifold_types.rs  market_handler.rs  rate_limiter.rs  utils.rs
src/bots/: arb_bot.rs  ewma_bot.rs  mod.rs
src/market_handler/: manifold_types.rs
