[package]
name = "mmm"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features=["blocking", "json"] }
async-trait = "0.1.74"
